feat: Deploy marketplace enhancements with live analytics
- Add marketplace analytics API endpoints for floor price and volume
- Update collection detail pages with live metrics
- Enhance mint functionality with subscription validation
- Add trending collections feature
- Update contract addresses to latest deployments
- Create Next.js API proxy routes for secure backend access
- Improve user experience with real-time data

--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,4 @@ REMOTE_DATABASE_URL="mongodb+srv://husseinmubarak500:kn2zhn29mSl3XdZd@cluster0.t
 CLOUDINARY_NAME="dmyad2zcs"
 CLOUDINARY_API_KEY="359159594618773"
 CLOUDINARY_API_SECRET="PTWalKvDeb1RGnRmU4V-sK2EZE4"
+API_VERSION=/v1
