--- a/client/package.json
+++ b/client/package.json
@@ -54,6 +54,7 @@
     "eslint-config-next": "13.4.12",
     "postcss": "8.4.27",
     "prettier": "3.0.1",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "vercel": "^50.23.2"
   }
 }
